--- a/day10/ex01/main.css
+++ b/day10/ex01/main.css
@@ -15,10 +15,8 @@ body {
     height: 100vh;
     margin: 0px;
     padding: 0px;
-    justify-content: center;
     align-items: center;
 }
-
 
 header {
     display: flex;
@@ -53,3 +51,8 @@ footer {
 .menu-item.select {
     background-color: darkorange;
 }
+.title-item {
+    font-size: 48px;   /* 원하는 크기 */
+    font-weight: bold;
+}
+
